# podmena

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOP.md  MANIFEST.in  Makefile  PREVIEW.md  Pipfile  README.md  cli.py  fetcher.py  parser.py  pyproject.toml  setup.py  utils.py
.github/workflows/: tests.yml
helpers/: fetcher.py  main.py  parser.py
podmena/: __init__.py  cli.py  config.py  fetcher.py  group.py  options.py  parser.py  utils.py
podmena/resources/: commit-msg  database.txt  database.yml  emoji-db
tests/: conftest.py  test_cli.py  test_cli_install.py  test_cli_uninstall.py  test_utils.py
