[tool.poetry]
name = "podmena"
version = "0.4.2"
description = "Enhance your commit messages with emoji"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.6.2"
click = "^8.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
