[tool.poetry]
name = "podmena"
version = "0.6.0"
description = "Enhance your commit messages with emoji"
authors = ["Misha Behersky <bmwant@gmail.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/bmwant/podmena"
keywords = ["git", "hook", "fun", "emoji", "commit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Unix Shell"
]

[tool.poetry.dependencies]
python = "^3.6.2"
click = "^8.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.0"

[tool.poetry.scripts]
podmena = 'podmena.cli:cli'

[tool.poetry.urls]
"Blog post" = "https://bmwlog.pp.ua/"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
